@@ -12,6 +12,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.data.domain.PageRequest;
 
 import java.time.LocalDateTime;
 import java.util.List;
@@ -75,54 +76,63 @@ public class ProductServiceImpl implements ProductService{
 
     @Override
     public String deleteProduct(Long productId) throws ProductException {
-        Product product = getProduct(productId);
+        Product product = findProductById(productId);
         product.getSizes().clear();
         productRepository.delete(product);
-        return "Product deleted successfully";
+        return "Product Deleted Successfully";
     }
+
 
     @Override
     public Product updateProduct(Long productId, Product req) throws ProductException {
-        Product product = getProduct(productId);
-        if(req.getQuantity()!=0){
+        Product product = findProductById(productId);
+
+        if(req.getQuantity() != 0){
             product.setQuantity(req.getQuantity());
         }
         return productRepository.save(product);
     }
 
+
     @Override
-    public Product getProduct(Long productId) throws ProductException {
-        Optional<Product>opt=productRepository.findById(productId);
-        if(!opt.isPresent()){
-            throw new ProductException("Product not found with id: "+productId);
+    public Product findProductById(Long productId) throws ProductException {
+        Optional<Product> opt = productRepository.findById(productId);
+        if(opt.isPresent()){
+            return opt.get();
         }
-        return opt.get();
+        throw new ProductException("Product not found with id - " + productId);
     }
 
     @Override
-    public List<Product> getProductByCategory(String category) {
+    public List<Product> findProductByCategory(String category) {
         return null;
     }
 
     @Override
     public Page<Product> getAllProducts(String category, List<String> colors, List<String> sizes, Integer minPrice, Integer maxPrice, Integer minDiscount, String sort, String stock, Integer pageNumber, Integer pageSize) {
-        Pageable pageable=org.springframework.data.domain.PageRequest.of(pageNumber,pageSize);
-        List<Product>products=productRepository.filterProducts(category,minPrice,maxPrice,minDiscount,sort);
-        if (colors != null && !colors.isEmpty()) {
-            products=products.stream().filter(product -> colors.stream().anyMatch((c->c.equalsIgnoreCase(product.getColor())))).toList();
+
+        Pageable pageable = PageRequest.of(pageNumber, pageSize);
+
+        List<Product> products = productRepository.filterProducts(category,minPrice,maxPrice,minDiscount,sort);
+
+        if(!colors.isEmpty()){
+            products = products.stream().filter(p -> colors.stream().anyMatch(c -> c.equalsIgnoreCase(p.getColor())))
+                    .collect(Collectors.toList());
         }
-        if (stock!=null){
+        if(stock != null){
             if(stock.equals("in_stock")){
-                products=products.stream().filter(product -> product.getQuantity()>0).toList();
-            }
-            else if(stock.equals("out-of-stock")){
-                products=products.stream().filter(product -> product.getQuantity()==0).toList();
+                products = products.stream().filter(p -> p.getQuantity() > 0).collect(Collectors.toList());
+            } else if(stock.equals("out_of_stock")) {
+                products = products.stream().filter(p -> p.getQuantity() < 1).collect(Collectors.toList());
             }
         }
-        int startIndex=(int) pageable.getOffset();
-        int endIndex=Math.min(startIndex+pageable.getPageSize(),products.size());
-        List<Product>pageContent=products.subList(startIndex,endIndex);
-        Page<Product>filteredProducts=new PageImpl<>(pageContent,pageable,products.size());
+
+        int startIndex = (int)pageable.getOffset();
+        int endIndex = Math.min(startIndex + pageable.getPageSize(), products.size());
+
+        List<Product> pageContent = products.subList(startIndex, endIndex);
+
+        Page<Product> filteredProducts = new PageImpl<>(pageContent, pageable, products.size());
         return filteredProducts;
     }
 }
